src/main/resources/static/css/board.css
@import "global.css";

#app {
    width: 100%;

    padding: 50px;
}

header.board__header,
header.project__header {
    margin-bottom: 50px;

    display: flex;
    align-items: center;
    column-gap: 15px;
}

h1.header__user-name,
h1.header__project-name {
    font-size: 3rem;
}

button.header__edit-button {
    aspect-ratio: 1;

    padding: 12px;
}

section.board__your-projects {
    display: grid;
    grid-template-columns: repeat(5, minmax(0, 1fr));
    gap: 10px;
}

header.your-projects__section-header {
    grid-column: 1 / -1;

    margin-bottom: 10px;

    display: flex;
    column-gap: 20px;
    row-gap: 5px;
    flex-wrap: wrap;
    align-items: center;
}

h2.section-header__title {
    text-transform: uppercase;
    font-weight: 700;
    font-size: 1.7rem;
}

.your-projects__project-box {
    border: solid 1px #E6E6E6;
    border-radius: 10px;

    padding: 10px;
}

h3.project-box__title {
    font-size: 1.2rem;
    font-weight: 700;

    margin-bottom: 5px;
}

.project-box__author-container {
    display: flex;
    column-gap: 5px;
    flex-wrap: wrap;
    align-items: center;
}

.author-container__pictures-container {
    display: flex;

    flex: none;
}

.pictures-container__picture {
    width: 15px;
    height: 15px;

    border: solid 1px white;
    border-radius: 999px;

    background: red;

    flex: none;
}
.pictures-container__picture:not(:first-child) {
    margin-left: -7px;
}

.author-container__username {
    font-weight: 600;
    font-size: .7rem;

    flex: none;
}

.project__lists-container {
    display: flex;
    column-gap: 20px;

    overflow-x: auto;
}

.lists-container__list,
.lists-container__new-list-container {
    border: solid 1px #d1d1d1;
    border-radius: 10px;

    width: 300px;
    height: 500px;

    display: flex;
    flex-direction: column;

    flex: none;

    position: relative;
}

.list__actions {
    position: absolute;
    top: -50%;
    right: 10px;

    transform: translateY(50%);

    display: flex;
    justify-content: flex-end;
    column-gap: 5px;
}

header.list__list-header,
header.new-list-container__list-header,
.list__list-content,
.new-list-container__list-content {
    width: 100%;
}

header.list__list-header,
header.new-list-container__list-header {
    background: #E6E6E6;

    border-bottom: solid 1px #d1d1d1;
    border-top-left-radius: 9px;
    border-top-right-radius: 9px;

    padding: 7px 20px;

    flex: none;
}

h2.list-header__title {
    font-size: 1.1rem;
    color: #5f5f5f;
    text-align: center;

    width: 100%;
}

.list__list-content,
.new-list-container__list-content {
    padding: 10px;

    display: flex;
    flex-direction: column;
    row-gap: 10px;

    overflow-y: auto;

    flex: 1;
}

.list-content__card {
    border: solid 1px #d1d1d1;
    border-radius: 10px;

    padding: 10px;
}

h3.card__title {
    font-weight: 700;
    font-size: 1.3rem;

    margin-bottom: 5px;
}

p.card__description {
    font-size: .8rem;
}

form.list-content__new-list-form,
form.new-project-container__form {
    display: flex;
    flex-direction: column;
    row-gap: 10px;
}

form.new-project-container__form {
    width: 25%;
}

form.new-project-container__form input {
    width: 100%;

    display: block;
}

form.list-content__new-list-form input,
form.list-content__new-list-form select {
    width: 100%;

    display: block;
}

.new-list-form__actions {
    display: flex;
    justify-content: center;
}

